tests/paczka1/fuzzy1/23645331.err
Error in line 8: A14 A718 94,8
Error in line 5: CAVbCf A47 24,2
Error in line 4: jgsVNDCODBv A47 24,6
Error in line 10: CAVbCf A718 47,7
Error in line 17: 5QFgiVA A718 46,1
Error in line 15: CAVbCf A14 4,7
Error in line 19: 5QFgiVA A14 86,1
Error in line 31: CAVbCf A14 54,2
Error in line 32: JyHGN5CsR A47 27,7
Error in line 36: JyHGN5CsR A718 6,9
